lab1/Test/L1-A-5-5.cmm
struct A1i {
}A ( ) {
  struct o5wnY yzh = - - - ! Q0gPVAPb2z_a * XrLat 
    ( ) [ du9tFV0hkKA1VY ] >= ! 1480020828 * NBxmYKNAWsSkAAHCb 
    / / qLYbElxmD / sexw != 1422390088.1679005651 . v 
    [ qSqT5AvTtsenQ ] [ c ] * oYBEEBIXW != - Npma1iE2iTojPZ56w 
    ( ) < ! ! IOj - c6LXu - rse1zQwuE40oP7Dba != ! 535493279 
    * BWjrzeZxdR / X_FAvsfhNF50 / tURWF + sqFXSZxAZnhM6lNJP7J 
    + _bPEwcxew2VZ5WhO < bPBvLVa2 ( ) [ hwFTFddtU59 ] 
    * XR3RXREk365tRu9_0yo6 + lAVyTiJBBhbiBIz8Ma + j2gXYA 
    - Ex + UUwJtKd >= uaq5tBRyovNtyl ( ) . boHvN7YJ / 
    LgfIA5A - PBM1eXvmV >= yz ( ) && - IQlDiaYO3ntDtv03 
    [ fSJ ] . yyLmUGIOhJ [ wS ] + C5y4Nab1thN7th3QH + 
    kZsIdiemQTxZ - anlXZHCnLSPhrsgVRoF6 == KNr0 > BBdsCJLObGziUrl7 
    <= Rq4M2a53TifPk == Wjq2 <= K5cIUIYSMdFtm < il9OJRvk6a3kT2Nfwd 
    != HCzEBS2nl_w_Gq8g < szTROsQU || - ! G / zK8i9fqoQH8vzZG9lP 
    / xlWVI3iQf4wtF * FR4_ * FoZQqLnDWdo5Ahir / zz2o2GjGgQfGQKalxx 
    * NI_y9aYfBIeYJpn / OBtI7LhgEP4NLHMA - b - E4I0l8N90H4hHw3BnB 
    != c61KSqw46sngsx >= Us != sdpML8TrDY_ < JVzZnR6vm 
    == p >= EFhJCifA <= zfkK < LkiGf >= g7dJ99FjZ1q0b 
    != VW8o4IR6i > CgXmcQe88j_wjdmYOtjQ >= WiMD ;
  int Rao_ = nJ86aNemh7416t ( ) = ! LyCSytQE2Db / 
    wfsHvCRioH5TVbB / fpfTI7SNEw_a3afMZK * qjXX - glfV0Fib3y 
    < Aqu19fH < OQAynzsFo6SeFNUd >= lRjc3 > AH94s0Pp0K7QJhSpI5M 
    == Rxo1h6yyp_Gt <= Sig5A3YgUV3V797T18kc > VqRXMUTG 
    && qEsY4S17YdoimW1d && P && && cpIDaBAefforxjKU , 
    aos7uyViMYmXvP ;
  float qsGmETLI = - - kgkID * syeHnxUuWYgKMYi < hmw 
    && G && sCAb3u_tpiydXZ0TKHcS #|| HvhZPBY8WStkRsLWnjFS 
    ;
  if ( ! Xtw9wv4xB98Bg7LWF ( ! OlDuk_2Bm08cJ * H2XRgcb5bggOcha 
    >= ngbwJqx > AdxkKJ && fcf9psv_b && x32YoJo69xcFDFpcEv 
    && mIgDVMbiGrZGx1pnyNV && uTcheU0HzIzV4jHkvRDV , gj5x 
    ) - - ! EUwh1yTVCQS4yyXZ - Szn ( UR2D6CxcoL ) * W5 
    / GXoCXYVbUApdZImS / D26ZexdyVWCVq * tlm4ntwaKtp6QowBv 
    - yAWhZEqUepoBrtA ( Ich9DWNZhmAdhEYt8ry ) / nzizTj 
    * P87gWlHEf * iK0cPLARQy / XaAywa - ! ! GU / G6nN 
    / mEJehjAwNmH3d9kfWAe * Uq9tKQ3r7Ctm1 / xpAQX0HPyQLwpFZnr1D 
    * Orcmw87HuRKR - ! - YzOdx6ZOID34Hi6aM4 * b5Ovpkg8 
    - ! 1958203678.2120815525 - A66i7wJYUOhA93d5a8tY ( 
    QyZQ5g7y_su2aYAcQBm ) [ O ] / GuuEWx6dTEJd3bktLVai 
    * i0aRDtv * mxCDiAMLTI / oKzPsPeToZv6CeFu - - ! uPTQUK2tcob56W9lEt8 
    + hw_rBZZ1Rh . . ZvINjiAwdmI9tLKfbI [ jv3VGUdWXaKY 
    ] [ T3ZN_p5Wm5hfL ] / yGVl0tse9Yd > hBu87cw5 ( EvPxJhoRIbMF4oC8d 
    ) * Z9ABfHTz8P * q / V3iAX79 * HruC88IhHRKX * XpL5L 
    * DtSOgkLkDqKQTS3730Ji * ABcLNXvxk * X6euSAnEhppo7 
    / IXVxpahVw / mXUeXgTzb4_Y + xFvshjIq < ! ! z / QZrlUqjebwlazRN7mAW 
    * lETja + uTJ5a8uYphbcIMJIY0Qa - _GamujmzIlBtHFJz 
    - ouCBZqXq <= Wr28f ( hMZlcgy9eW ) * EH4ZGv31cGqH0yC 
    + PzFvk6Us6l6ngLBsp87 - Bi1tbDh + zCBjcCPr5RqoPISi 
    + TLZvtKf + KU + SVElTSTyKdHrEc9t9uDG - V3zjlZQ >= 
    fgtWCaqKR2vjTDIT_9xm ( ) [ iybzCRwKoXduDOuB ] . qKa1wSFkRNY 
    - PBEiQ + OOcyYSQZ8kOZpx3lrfP - j__fUf66mGSe5EyKpj4v 
    + agmxe3kRt == ! - JY2AWvRY * VuAWel8S_PA2NqZJK4 * 
    gTKZ0aDr * T068whU && ! ! sPDdcAs7gXVn >= S8IlW7 < 
    zvPy9o7TFYi25Fgz < V2 )   if ( SzoG1eEQC )   aMKUr1C 
    ;
else   if ( _A1l9UJfcErj0NF )   Ijt8ZxF0 ;



}
int u2Afv7m , mOE9qQgGeNwK , rbfGCIiYCmsKQX9 [ 1095409006 
  ] [ 1589784739 ] , ZBDPy6fGkGFAyZGO4JNo 



;
